--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^5.20.6",
     "next": "14.1.4",
     "react": "^18",
+    "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
   },
