--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
